# local-llm-email-cleaner

./: .gitignore  CLAUDE.md  README.md  config.example.toml  pyproject.toml
.claude/commands/: full-review.md
.claude/design/: mbox-ai-integration.md
.devcontainer/: Dockerfile  devcontainer.json
scripts/: migrate_v5_to_v6.py  start-ollama.ps1
src/local_llm_email_cleaner/: __init__.py  cli.py  config.py  db.py  export.py  logging_setup.py  models.py  policy.py  schema.sql  voice_export.py
src/local_llm_email_cleaner/gmail/: __init__.py  auth.py  reconcile.py  runner.py
src/local_llm_email_cleaner/ingest/: __init__.py  bodies.py  contacts.py  headers.py  mbox_reader.py  store.py  voice.py
src/local_llm_email_cleaner/llm/: __init__.py  chain.py  classifier.py  prompts.py  schema.py
src/local_llm_email_cleaner/review/: __init__.py  app.py  components.py  page_apply.py  page_overview.py  page_policy.py  page_review.py  page_rules.py  page_senders.py  queries.py  trace.py
src/local_llm_email_cleaner/rules/: __init__.py  candidate_rules.py  default_rules.toml  engine.py  matcher.py  patterns.py  protection_rules.py  rationale.py  ruleset.py  views.py
tests/: conftest.py  test_auth.py  test_classifier.py  test_components.py  test_decision_display.py  test_export.py  test_gmail_runner.py  test_ingest.py  test_migration.py  test_policy.py  test_review_app.py  test_review_queries.py  test_rules.py  test_ruleset.py  test_trace.py  test_voice.py
