[project]
name = "local-llm-email-cleaner"
version = "0.1.0"
description = "Local-LLM-powered Gmail cleanup tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
email-cleaner = "local_llm_email_cleaner:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"
